# todd-rewrite

./: hackexhelp.json  help.json  keep_alive.py  main.py  pyproject.toml
cogs/: hackex.py  pp.py  prefix.py  reaction.py  trade.py
utils/: myfunctions.py
